fix post stats alignment

--- a/_sass/tale/base/_variables.scss
+++ b/_sass/tale/base/_variables.scss
@@ -5,6 +5,7 @@ $code-color: #bf616a;
 $bg-color: #222426;
 $bg-code-color: #1B1B1B;
 $link-color: #909498;
+$stats-color: #909498;
 $post-line-break-color: orangered;
 $catalogue-line-break-color: orangered;
 $pagination-current-color: orangered;
